--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 api.security.token.secret=${JWT_SECRET:my-secret-key}
+
+springdoc.swagger-ui.disable-swagger-default-url=true
